Overflow fix

--- a/retool/scss/color.scss
+++ b/retool/scss/color.scss
@@ -81,6 +81,7 @@ body{
 	height:50%;
 	width:25%;
 	margin: 0px;
+	overflow: hidden;
 }
 
 #g1{background: $dark-grey;}
@@ -94,13 +95,14 @@ body{
 
 .hovercontent{
 	background: #222222;
+	background: rgba(0, 0, 0, 0.7);
 	width: 100%;
 	height: 100%;
 	opacity: 0;
 	z-index:5;
 	text-align: center;
 	-webkit-transition: opacity 0.2s ease-out, -webkit-transform 0.2s ease-in-out;
-	-webkit-transform: scale3d(1.05, 1, 1) translate3d(0, 1%, 0);
+	-webkit-transform: scale3d(1.3, 1.3, 1) translate3d(0, 10%, 0);
 }
 
 .block:hover .hovercontent {
